2003-01-27  Steve Fox  <drfickle@k-lug.org>

	* press/pr-bitstreamfonts.html

	Remove header info from press release

2003-01-22  Steve Fox  <drfickle@k-lug.org>

	* index.html
	* press.html
	* press/pr-bitstreamfonts.html

	Add the Bitstream font donation press item.

2002-12-21  Vincent Untz  <vincent@vuntz.net>

	* index.html: added the news for the official results
	* ballot-summary.html
	* electionrules.html
	* elections.html
	* overview.html
	* voters.html
	* elections/2002/preliminary_results.html
	* elections/2002/verify.html: added a link to the official results
	announcement
	* board_of_directors-2000.html
	* board_of_directors-2001.html
	* board_of_directors.html: changed the board of directors and added a
	page for the 2001/2002 board

2002-12-03  Vincent Untz  <vincent@vuntz.net>

	* index.html: fix wrong date

2002-12-03  Vincent Untz  <vincent@vuntz.net>

	* ballot-summary.html
	* electionrules.html
	* elections.html
	* index.html
	* overview.html
	* voters.html
	* elections/2002/* (new): preliminary results for the elections

2002-11-24  Vincent Untz  <vincent@vuntz.net>

	* election-2000.html
	* voters-2000.html (new): added a list of voters for 2000 elections

2002-11-24  Vincent Untz  <vincent@vuntz.net>

	* voters-2001.html: fixed the list (some people were missing)
	* ballot-summary-2001.html
	* ballot-summary.html
	* election-2000.html
	* election-2001.html
	* electionrules-2001.html
	* electionrules.html
	* elections.html
	* overview.html
	* voters-2001.html
	* voters.html: better navigation for archives of elections

2002-11-24  Vincent Untz  <vincent@vuntz.net>

	* election-2001.html
	* voters-2001.html (new): added back list of voters for 2001 elections

2002-11-23  Vincent Untz  <vincent@vuntz.net>

	* voters.html: we talk about elections, not memberships

2002-11-23  Vincent Untz  <vincent@vuntz.net>

	* voters.html: sorted the list alphabetically and removed the
	contribution (they are in membership-list.html)
