@@ -44,7 +44,14 @@
       <table border="0" width="90%" align="center" cellpadding=3 cellspacing=3>
 
        <tr>
-	    <td>January 22, 2002</td>
+	       <td>February 18, 2003</td>
+	       <td><a href="press/pr-guadec.html">Free software luminaries, open source developers gather to advance the next
+			       generation of the multi-platform desktop environment at GUADEC 2003, Dublin Ireland.
+	       </a></td>
+       </tr>
+
+       <tr>
+	    <td>January 22, 2003</td>
         <td><a href="press/pr-bitstreamfonts.html">GNOME Foundation and Bitstream Inc. announce long-term agreement to bring high quality fonts to Free Software</a></td>
        </tr>
 
