@@ -1,0 +1,131 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+ <head>
+  <title>The GNOME Foundation: The fourth annual GNOME Users and Developers European Conference (GUADEC)</title>
+ </head>
+ <body bgcolor="#FFFFFF">
+  <center>
+   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+    <tr VALIGN=TOP NOSAVE>
+     <td VALIGN=TOP NOSAVE>
+      <center>
+       <a href="http://www.gnome.org">
+       <img SRC="../gnome.jpg" ALT="" height=250 width=198 border=0></a><img
+       SRC="../text.png" ALT="The GNOME Foundation" height=198 width=354>
+      </center>
+     </td>
+    </tr>
+
+    <tr>
+     <td>
+      <center>
+       <a href="../index.html">Home</a> :&nbsp;
+       Press :&nbsp;
+       <a href="../organization.html">Organization</a> :&nbsp;
+       <a href="../documentation.html">Documentation</a> :&nbsp;
+       <a href="../membership.html">Membership</a> :&nbsp;
+       <a href="../elections.html">Elections</a> :&nbsp;
+       <a href="../directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="../press.html">[Other Press Releases]</a>
+      </center>
+     </td>
+    </tr>
+
+    <!-- End of Boilerplate -->
+
+    <tr>
+     <td>
+
+	     <h3 align="center">GUADEC 2003 TO ATTRACT GLOBAL AUDIENCE OF GNOME DEVELOPERS AND ENTHUSIASTS
+	     </h3>
+
+	     <p><b>Free software luminaries, open source developers gather to advance the next
+		     generation of the multi-platform desktop environment</b></p>
+		  
+
+<pre>
+BOSTON, Mass.   February 18, 2003  The fourth annual GNOME User and
+Developer European Conference (GUADEC), will bring developers, GNOME
+Foundation leaders and individual, business and government GNOME users to
+Dublin, Ireland June 16-18, 2003.  The conference is a unique forum for
+highlighting the capabilities and direction of GNOME, the user environment
+for desktops, networked servers and portable Internet devices.  GUADEC will
+also feature meaningful discussions of the future direction of GNOME
+development.  GUADEC 2003 will feature a comprehensive set of tutorials that
+will benefit IT leaders, developers and deployers of GNOME.
+
+GUADEC has quadrupled in attendance over the past three years, drawing
+GNOME developers, industry, government and education IT leaders and GNOME
+enthusiasts from every corner of the world, said Timothy Ney, GNOME
+Foundation executive director.  GUADEC is a unique event that brings the
+people who are creating GNOME together to discuss and demonstrate their work
+and to build roadmaps for future development.  Pair these developers with IT
+leaders from every sector and you get the electric environment that is
+GUADEC.
+
+GUADEC is being held June 16-18, 2003 at Trinity College in Dublin, Ireland.
+The program will boast a stellar lineup of speakers, from GNOME leaders to
+IT industry movers and shakers. Additional information on GUADEC can be
+found at www.guadec.org.
+
+GUADEC is an opportunity to bring developers, who have worked with one
+another virtually for months and/or years, together in one place.  Miguel
+de Icaza, president of the GNOME Foundation and CTO and co-founder, Ximian,
+Inc. said. It gives us a chance to meet with the very people who are
+deploying GNOME.  GUADEC gives us a chance to discuss the future of GNOME
+and set the overall strategy and direction of GNOME for the next year.
+
+About GNOME
+GNOME is a free software project that provides a complete, easy to use
+desktop for a variety of operating systems, including GNU/Linux (more
+commonly known as Linux), BSD, Solaris , Operating Environment, HP-UX,
+Unix, BSD and Apples Darwin.  The GNOME desktop is used by millions of
+people around the world.  More than 700 computer developers, including over
+100 full-time, paid developers, contribute their time and effort to the
+project.
+
+About GUADEC
+The GNOME User and Developer Europe Conference (GUADEC) is an annual
+gathering of GNOME developers, enthusiasts and individual, business,
+education and government users worldwide.  It provides a forum for members
+of the GNOME project to showcase their work and to discuss the future of
+GNOME development.  Housed in a different European country each year, GUADEC
+is a catalyst for the future development and direction of GNOME.
+
+
+About the GNOME Foundation
+Comprised of hundreds of volunteer developers and industry-leading
+companies, the GNOME Foundation is an organization committed to supporting
+the advancement of GNOME. The Foundation provides organizational, financial
+and legal support to the GNOME project and helps determine its vision and
+roadmap. GNOME is an entirely free user environment for desktops, networked
+servers and portable Internet devices.  The modern architecture and design
+of GNOME includes a technically advanced application development platform
+and a powerful end-user desktop environment.  Major leading software
+industry and computer manufacturers support the GNOME development effort,
+which is led by a worldwide community of volunteers.  More information on
+GNOME is available at www.gnome.org.
+#  #  #
+</pre>
+
+     </td>
+    </tr>
+
+    <!-- Start of Boilerplate -->
+    <tr>
+     <td>
+      <center><font size=-1>This site is maintained by
+      <a href="mailto:membership@gnome.org">the GNOME Foundation Membership and Elections Committee</a>
+      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP
+      Schnapper-Casteras</a> and <a href="mailto:bart@eazel.com">Bart Decrem</a>.</font></center>
+     </td>
+    </tr>
+   </table>
+  </center>
+
+ </body>
+</html>
+
