@@ -1,3 +1,10 @@
+2003-02-18  Glynn Foster <glynn.foster@sun.com>
+
+	* press/pr-guadec.html
+	* press.html
+
+	Add GUADEC 2003 press release.
+
 2003-01-27  Steve Fox  <drfickle@k-lug.org>
 
 	* press/pr-bitstreamfonts.html
